--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   overflow-x: hidden;
-  background: linear-gradient(to bottom right, #881337, #9d174d, #7e22ce);
+  /*background: linear-gradient(to bottom right, #881337, #9d174d, #7e22ce);*/
 }
 
 body {
